# AI-Assistant

./: Dockerfile.python-sandbox  LICENSE  MIGRATION_SKETCH.md  README.md  TODO.md  apartment_search.py  app.py  config.py  design_proposal.html  interview.py  jobs.py  knowledge.py  pyproject.toml  readdb.py  scheduler.py  session_manager.py  sidekick.py  sidekick_tools.py  user_profile.py
.github/workflows/: tests.yml
agents/: __init__.py  base.py  browser.py  documents.py  interview.py  jobsearch.py  knowledge.py  location.py  research.py  system.py
api/: README.md  deps.py  main.py  schemas.py
api/routes/: chat.py  interview.py  jobs.py  knowledge.py  sessions.py  tasks.py
tests/: conftest.py  test_apartment_search.py  test_knowledge.py  test_scheduler.py  test_tools_unit.py
tools/: __init__.py  browser.py  docker_repl.py  documents.py  knowledge_tools.py  location.py  research.py  system.py
web/: .gitignore  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/app/: ChatView.tsx  RightRail.tsx  SessionsRail.tsx  Workspace.tsx  app.css  layout.tsx  page.tsx  panels.tsx
web/components/: Architecture.tsx  Author.tsx  Demo.tsx  Features.tsx  Footer.tsx  Hero.tsx  Icon.tsx  Marquee.tsx  Nav.tsx  Numbers.tsx  RevealManager.tsx
web/lib/: agents.ts  api.ts  features.ts  types.ts
