[project]
name = "agents"
version = "0.1.0"
description = "ApexFlow — high-performance information retrieval and processing assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "arxiv>=2.4.0",
    "bs4>=0.0.2",
    "fpdf2>=2.8.5",
    "gradio>=5.22.0",
    "httpx>=0.28.1",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "lxml>=5.3.1",
    "openai>=1.68.2",
    "playwright>=1.51.0",
    "pypdf>=5.4.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
